--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -8,6 +8,7 @@ $column-gap: 0.75rem !default
   padding: $column-gap
   .columns.is-mobile > &.is-narrow
     flex: none
+    width: unset
   .columns.is-mobile > &.is-full
     flex: none
     width: 100%
@@ -65,6 +66,7 @@ $column-gap: 0.75rem !default
   +mobile
     &.is-narrow-mobile
       flex: none
+      width: unset
     &.is-full-mobile
       flex: none
       width: 100%
@@ -123,6 +125,7 @@ $column-gap: 0.75rem !default
     &.is-narrow,
     &.is-narrow-tablet
       flex: none
+      width: unset
     &.is-full,
     &.is-full-tablet
       flex: none
@@ -201,6 +204,7 @@ $column-gap: 0.75rem !default
   +touch
     &.is-narrow-touch
       flex: none
+      width: unset
     &.is-full-touch
       flex: none
       width: 100%
@@ -258,6 +262,7 @@ $column-gap: 0.75rem !default
   +desktop
     &.is-narrow-desktop
       flex: none
+      width: unset
     &.is-full-desktop
       flex: none
       width: 100%
@@ -315,6 +320,7 @@ $column-gap: 0.75rem !default
   +widescreen
     &.is-narrow-widescreen
       flex: none
+      width: unset
     &.is-full-widescreen
       flex: none
       width: 100%
@@ -372,6 +378,7 @@ $column-gap: 0.75rem !default
   +fullhd
     &.is-narrow-fullhd
       flex: none
+      width: unset
     &.is-full-fullhd
       flex: none
       width: 100%
