--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -540,6 +540,18 @@ fieldset[disabled] .button.is-text {
   box-shadow: none;
 }
 
+.button.is-ghost {
+  background: none;
+  border-color: transparent;
+  color: #3273dc;
+  text-decoration: none;
+}
+
+.button.is-ghost:hover, .button.is-ghost.is-hovered {
+  color: #3273dc;
+  text-decoration: underline;
+}
+
 .button.is-white {
   background-color: white;
   border-color: transparent;
