Use imports everywhere

--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -1,3 +1,5 @@
+@import "../utilities/mixins"
+
 $card-color: $text !default
 $card-background-color: $scheme-main !default
 $card-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0px 0 1px rgba($scheme-invert, 0.02) !default
