--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -1,3 +1,6 @@
+@import "../utilities/controls"
+@import "../utilities/mixins"
+
 $button-color: $text-strong !default
 $button-background-color: $scheme-main !default
 $button-family: false !default
