--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -1,3 +1,5 @@
+@import "../utilities/mixins"
+
 $media-border-color: bulmaRgba($border, 0.5) !default
 $media-border-size: 1px !default
 $media-spacing: 1rem !default
