--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -1,3 +1,6 @@
+@import "../utilities/controls"
+@import "../utilities/mixins"
+
 $pagination-color: $text-strong !default
 $pagination-border-color: $border !default
 $pagination-margin: -0.25rem !default
