--- a/sass/form/input-textarea.sass
+++ b/sass/form/input-textarea.sass
@@ -1,3 +1,5 @@
+@import "shared"
+
 $textarea-padding: $control-padding-horizontal !default
 $textarea-max-height: 40em !default
 $textarea-min-height: 8em !default
