Clean up test folder structure

--- a/test/ruby-sass/sass/customize.scss
+++ b/test/ruby-sass/sass/customize.scss
@@ -26,12 +26,12 @@ $input-border-color: transparent;
 $input-shadow: none;
 
 // Import only what you need from Bulma
-@import "../../sass/utilities/_all.sass";
-@import "../../sass/base/_all.sass";
-@import "../../sass/elements/button.sass";
-@import "../../sass/elements/container.sass";
-@import "../../sass/elements/title.sass";
-@import "../../sass/form/_all.sass";
-@import "../../sass/components/navbar.sass";
-@import "../../sass/layout/hero.sass";
-@import "../../sass/layout/section.sass";
+@import "../../../sass/utilities/_all.sass";
+@import "../../../sass/base/_all.sass";
+@import "../../../sass/elements/button.sass";
+@import "../../../sass/elements/container.sass";
+@import "../../../sass/elements/title.sass";
+@import "../../../sass/form/_all.sass";
+@import "../../../sass/components/navbar.sass";
+@import "../../../sass/layout/hero.sass";
+@import "../../../sass/layout/section.sass";
