Adds is-required to label
Adds .is-required class to label adding a required star. 
Uses the $danger color variable.

--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -21,6 +21,9 @@ $label-colors: $form-colors !default
     font-size: $size-medium
   &.is-large
     font-size: $size-large
+  &.is-required:before
+    content: "*"
+    color: $danger
 
 .help
   display: block
