Display .dropdown-content as block by default

--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -51,6 +51,7 @@ $dropdown-divider-background-color: $border-light !default
   background-color: $dropdown-content-background-color
   border-radius: $dropdown-content-radius
   box-shadow: $dropdown-content-shadow
+  display: block
   padding-bottom: $dropdown-content-padding-bottom
   padding-top: $dropdown-content-padding-top
 
