Init icon text, Remove old new-tag elements

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2937,6 +2937,31 @@ fieldset[disabled] .button {
   width: 3rem;
 }
 
+.icon-text {
+  align-items: flex-start;
+  color: inherit;
+  display: flex;
+  line-height: 1.5rem;
+}
+
+.icon-text .icon {
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.icon-text .icon:first-child {
+  margin-right: 0.25em;
+}
+
+.icon-text .icon:last-child {
+  margin-left: 0.25em;
+}
+
+.icon-text span:not(.icon) {
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
 .delete, .modal-close, .button, .file, .breadcrumb, .pagination-previous,
 .pagination-next,
 .pagination-link,
