--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -24,15 +24,18 @@ $icon-text-spacing: 0.25em !default
 .icon-text
   align-items: flex-start
   color: inherit
-  display: flex
+  display: inline-flex
+  flex-wrap: wrap
   line-height: $icon-dimensions
+  vertical-align: top
   .icon
     flex-grow: 0
     flex-shrink: 0
-    &:first-child
+    &:not(:last-child)
       margin-right: $icon-text-spacing
-    &:last-child
+    &:not(:first-child)
       margin-left: $icon-text-spacing
-  span:not(.icon)
-    flex-grow: 1
-    flex-shrink: 1
+
+div.icon-text
+  @extend %block
+  display: flex
