Add z-index exception for grouped, outlined buttons

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -313,6 +313,8 @@ $button-borderless-colors: ('white','light','black','text','primary','link','inf
       @each $name, $pair in $button-borderless-colors
         &.is-#{$name}
           z-index: 1
+      &.is-outlined
+        z-index: 2
       &:not(:first-child)
         border-bottom-left-radius: 0
         border-top-left-radius: 0
