--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -89,6 +89,8 @@ $button-borderless-colors: ('white','light','black','text','primary','link','inf
         @each $name, $pair in $button-borderless-colors
           &.is-#{$name}
             z-index: 1
+        &.is-outlined
+          z-index: 2
       &.is-expanded
         flex-grow: 1
         flex-shrink: 1
