--- a/docs/documentation/layout/level.html
+++ b/docs/documentation/layout/level.html
@@ -190,7 +190,7 @@ breadcrumb:
 {% include elements/anchor.html name="Centered level" %}
 
 <div class="content">
-  If you want a <strong>centered level</strong>, you can use as many <code>level-item</code> as you want, as long as they are <strong>direct</strong> children of the <code>level</code> container.
+  If you want a <strong>centered level</strong>, you can use as many <code>level-item</code>s as you want, as long as they are <strong>direct</strong> children of the <code>level</code> container.
 </div>
 
 {% include elements/snippet.html content=nav_centered_example horizontal=true more=true %}
