Remove a space between anchor and exclamation mark
![image](https://freeimage.host/i/FVXHsj)

--- a/docs/_includes/book/book-content.html
+++ b/docs/_includes/book/book-content.html
@@ -53,8 +53,7 @@
     </div>
     <div class="bd-book-sample">
       Or <a href="{{ site.data.meta.book_sample }}" target="_blank" rel="nofollow">
-        download a free sample
-      </a>!
+        download a free sample</a>!
     </div>
   </div>
 </div>
