合并最新bulma代码，并修改ming-color

--- a/sass/ming/color/functions.sass
+++ b/sass/ming/color/functions.sass
@@ -89,7 +89,7 @@ $darkColorCount: 4
   @return ch-hsv-to-color($adjustHue, $adjustSaturation, $adjustLight)
 
 
-// colorPalette
+// colorPalette,经测试，此方法计算的值不准确。所以使用上面那个generateColor。
 @function colorPalette($color,$index)
   $isLight: $index <= 6
   $hsv: ch-color-to-hsv($color)
