--- a/sass/ming/color/initial-variables.sass
+++ b/sass/ming/color/initial-variables.sass
@@ -3,161 +3,161 @@
 
 // color palettes
 $blue-base: #1890ff
-$blue-1: colorPalette($blue-base, 1)
-$blue-2: colorPalette($blue-base, 2)
-$blue-3: colorPalette($blue-base, 3)
-$blue-4: colorPalette($blue-base, 4)
-$blue-5: colorPalette($blue-base, 5)
+$blue-1: generateColor($blue-base, 5, true)
+$blue-2: generateColor($blue-base, 4, true)
+$blue-3: generateColor($blue-base, 3, true)
+$blue-4: generateColor($blue-base, 2, true)
+$blue-5: generateColor($blue-base, 1, true)
 $blue-6: $blue-base
-$blue-7: colorPalette($blue-base, 7)
-$blue-8: colorPalette($blue-base, 8)
-$blue-9: colorPalette($blue-base, 9)
-$blue-10: colorPalette($blue-base, 10)
+$blue-7: generateColor($blue-base, 1, false)
+$blue-8: generateColor($blue-base, 2, false)
+$blue-9: generateColor($blue-base, 3, false)
+$blue-10: generateColor($blue-base, 4, false)
 
 $purple-base: #722ed1
-$purple-1: colorPalette($purple-base, 1)
-$purple-2: colorPalette($purple-base, 2)
-$purple-3: colorPalette($purple-base, 3)
-$purple-4: colorPalette($purple-base, 4)
-$purple-5: colorPalette($purple-base, 5)
+$purple-1: generateColor($purple-base, 5, true)
+$purple-2: generateColor($purple-base, 4, true)
+$purple-3: generateColor($purple-base, 3, true)
+$purple-4: generateColor($purple-base, 2, true)
+$purple-5: generateColor($purple-base, 1, true)
 $purple-6: $purple-base
-$purple-7: colorPalette($purple-base, 7)
-$purple-8: colorPalette($purple-base, 8)
-$purple-9: colorPalette($purple-base, 9)
-$purple-10: colorPalette($purple-base, 10)
+$purple-7: generateColor($purple-base, 1, false)
+$purple-8: generateColor($purple-base, 2, false)
+$purple-9: generateColor($purple-base, 3, false)
+$purple-10: generateColor($purple-base, 4, false)
 
 $cyan-base: #13c2c2
-$cyan-1: colorPalette($cyan-base, 1)
-$cyan-2: colorPalette($cyan-base, 2)
-$cyan-3: colorPalette($cyan-base, 3)
-$cyan-4: colorPalette($cyan-base, 4)
-$cyan-5: colorPalette($cyan-base, 5)
+$cyan-1: generateColor($cyan-base, 5, true)
+$cyan-2: generateColor($cyan-base, 4, true)
+$cyan-3: generateColor($cyan-base, 3, true)
+$cyan-4: generateColor($cyan-base, 2, true)
+$cyan-5: generateColor($cyan-base, 1, true)
 $cyan-6: $cyan-base
-$cyan-7: colorPalette($cyan-base, 7)
-$cyan-8: colorPalette($cyan-base, 8)
-$cyan-9: colorPalette($cyan-base, 9)
-$cyan-10: colorPalette($cyan-base, 10)
+$cyan-7: generateColor($cyan-base, 1, false)
+$cyan-8: generateColor($cyan-base, 2, false)
+$cyan-9: generateColor($cyan-base, 3, false)
+$cyan-10: generateColor($cyan-base, 4, false)
 
 $green-base: #52c41a
-$green-1: colorPalette($green-base, 1)
-$green-2: colorPalette($green-base, 2)
-$green-3: colorPalette($green-base, 3)
-$green-4: colorPalette($green-base, 4)
-$green-5: colorPalette($green-base, 5)
+$green-1: generateColor($green-base, 5, true)
+$green-2: generateColor($green-base, 4, true)
+$green-3: generateColor($green-base, 3, true)
+$green-4: generateColor($green-base, 2, true)
+$green-5: generateColor($green-base, 1, true)
 $green-6: $green-base
-$green-7: colorPalette($green-base, 7)
-$green-8: colorPalette($green-base, 8)
-$green-9: colorPalette($green-base, 9)
-$green-10: colorPalette($green-base, 10)
+$green-7: generateColor($green-base, 1, false)
+$green-8: generateColor($green-base, 2, false)
+$green-9: generateColor($green-base, 3, false)
+$green-10: generateColor($green-base, 4, false)
 
 $magenta-base: #eb2f96
-$magenta-1: colorPalette($magenta-base, 1)
-$magenta-2: colorPalette($magenta-base, 2)
-$magenta-3: colorPalette($magenta-base, 3)
-$magenta-4: colorPalette($magenta-base, 4)
-$magenta-5: colorPalette($magenta-base, 5)
+$magenta-1: generateColor($magenta-base, 5, true)
+$magenta-2: generateColor($magenta-base, 4, true)
+$magenta-3: generateColor($magenta-base, 3, true)
+$magenta-4: generateColor($magenta-base, 2, true)
+$magenta-5: generateColor($magenta-base, 1, true)
 $magenta-6: $magenta-base
-$magenta-7: colorPalette($magenta-base, 7)
-$magenta-8: colorPalette($magenta-base, 8)
-$magenta-9: colorPalette($magenta-base, 9)
-$magenta-10: colorPalette($magenta-base, 10)
+$magenta-7: generateColor($magenta-base, 1, false)
+$magenta-8: generateColor($magenta-base, 2, false)
+$magenta-9: generateColor($magenta-base, 3, false)
+$magenta-10: generateColor($magenta-base, 4, false)
 
 // alias of magenta
 $pink-base: #eb2f96
-$pink-1: colorPalette($pink-base, 1)
-$pink-2: colorPalette($pink-base, 2)
-$pink-3: colorPalette($pink-base, 3)
-$pink-4: colorPalette($pink-base, 4)
-$pink-5: colorPalette($pink-base, 5)
+$pink-1: generateColor($pink-base, 5, true)
+$pink-2: generateColor($pink-base, 4, true)
+$pink-3: generateColor($pink-base, 3, true)
+$pink-4: generateColor($pink-base, 2, true)
+$pink-5: generateColor($pink-base, 1, true)
 $pink-6: $pink-base
-$pink-7: colorPalette($pink-base, 7)
-$pink-8: colorPalette($pink-base, 8)
-$pink-9: colorPalette($pink-base, 9)
-$pink-10: colorPalette($pink-base, 10)
+$pink-7: generateColor($pink-base, 1, false)
+$pink-8: generateColor($pink-base, 2, false)
+$pink-9: generateColor($pink-base, 3, false)
+$pink-10: generateColor($pink-base, 4, false)
 
 $red-base: #f5222d
-$red-1: colorPalette($red-base, 1)
-$red-2: colorPalette($red-base, 2)
-$red-3: colorPalette($red-base, 3)
-$red-4: colorPalette($red-base, 4)
-$red-5: colorPalette($red-base, 5)
+$red-1: generateColor($red-base, 5, true)
+$red-2: generateColor($red-base, 4, true)
+$red-3: generateColor($red-base, 3, true)
+$red-4: generateColor($red-base, 2, true)
+$red-5: generateColor($red-base, 1, true)
 $red-6: $red-base
-$red-7: colorPalette($red-base, 7)
-$red-8: colorPalette($red-base, 8)
-$red-9: colorPalette($red-base, 9)
-$red-10: colorPalette($red-base, 10)
+$red-7: generateColor($red-base, 1, false)
+$red-8: generateColor($red-base, 2, false)
+$red-9: generateColor($red-base, 3, false)
+$red-10: generateColor($red-base, 4, false)
 
 $orange-base: #fa8c16
-$orange-1: colorPalette($orange-base, 1)
-$orange-2: colorPalette($orange-base, 2)
-$orange-3: colorPalette($orange-base, 3)
-$orange-4: colorPalette($orange-base, 4)
-$orange-5: colorPalette($orange-base, 5)
+$orange-1: generateColor($orange-base, 5, true)
+$orange-2: generateColor($orange-base, 4, true)
+$orange-3: generateColor($orange-base, 3, true)
+$orange-4: generateColor($orange-base, 2, true)
+$orange-5: generateColor($orange-base, 1, true)
 $orange-6: $orange-base
-$orange-7: colorPalette($orange-base, 7)
-$orange-8: colorPalette($orange-base, 8)
-$orange-9: colorPalette($orange-base, 9)
-$orange-10: colorPalette($orange-base, 10)
+$orange-7: generateColor($orange-base, 1, false)
+$orange-8: generateColor($orange-base, 2, false)
+$orange-9: generateColor($orange-base, 3, false)
+$orange-10: generateColor($orange-base, 4, false)
 
 $yellow-base: #fadb14
-$yellow-1: colorPalette($yellow-base, 1)
-$yellow-2: colorPalette($yellow-base, 2)
-$yellow-3: colorPalette($yellow-base, 3)
-$yellow-4: colorPalette($yellow-base, 4)
-$yellow-5: colorPalette($yellow-base, 5)
+$yellow-1: generateColor($yellow-base, 5, true)
+$yellow-2: generateColor($yellow-base, 4, true)
+$yellow-3: generateColor($yellow-base, 3, true)
+$yellow-4: generateColor($yellow-base, 2, true)
+$yellow-5: generateColor($yellow-base, 1, true)
 $yellow-6: $yellow-base
-$yellow-7: colorPalette($yellow-base, 7)
-$yellow-8: colorPalette($yellow-base, 8)
-$yellow-9: colorPalette($yellow-base, 9)
-$yellow-10: colorPalette($yellow-base, 10)
+$yellow-7: generateColor($yellow-base, 1, false)
+$yellow-8: generateColor($yellow-base, 2, false)
+$yellow-9: generateColor($yellow-base, 3, false)
+$yellow-10: generateColor($yellow-base, 4, false)
 
 $volcano-base: #fa541c
-$volcano-1: colorPalette($volcano-base, 1)
-$volcano-2: colorPalette($volcano-base, 2)
-$volcano-3: colorPalette($volcano-base, 3)
-$volcano-4: colorPalette($volcano-base, 4)
-$volcano-5: colorPalette($volcano-base, 5)
+$volcano-1: generateColor($volcano-base, 5, true)
+$volcano-2: generateColor($volcano-base, 4, true)
+$volcano-3: generateColor($volcano-base, 3, true)
+$volcano-4: generateColor($volcano-base, 2, true)
+$volcano-5: generateColor($volcano-base, 1, true)
 $volcano-6: $volcano-base
-$volcano-7: colorPalette($volcano-base, 7)
-$volcano-8: colorPalette($volcano-base, 8)
-$volcano-9: colorPalette($volcano-base, 9)
-$volcano-10: colorPalette($volcano-base, 10)
+$volcano-7: generateColor($volcano-base, 1, false)
+$volcano-8: generateColor($volcano-base, 2, false)
+$volcano-9: generateColor($volcano-base, 3, false)
+$volcano-10: generateColor($volcano-base, 4, false)
 
 $geekblue-base: #2f54eb
-$geekblue-1: colorPalette($geekblue-base, 1)
-$geekblue-2: colorPalette($geekblue-base, 2)
-$geekblue-3: colorPalette($geekblue-base, 3)
-$geekblue-4: colorPalette($geekblue-base, 4)
-$geekblue-5: colorPalette($geekblue-base, 5)
+$geekblue-1: generateColor($geekblue-base, 5, true)
+$geekblue-2: generateColor($geekblue-base, 4, true)
+$geekblue-3: generateColor($geekblue-base, 3, true)
+$geekblue-4: generateColor($geekblue-base, 2, true)
+$geekblue-5: generateColor($geekblue-base, 1, true)
 $geekblue-6: $geekblue-base
-$geekblue-7: colorPalette($geekblue-base, 7)
-$geekblue-8: colorPalette($geekblue-base, 8)
-$geekblue-9: colorPalette($geekblue-base, 9)
-$geekblue-10: colorPalette($geekblue-base, 10)
+$geekblue-7: generateColor($geekblue-base, 1, false)
+$geekblue-8: generateColor($geekblue-base, 2, false)
+$geekblue-9: generateColor($geekblue-base, 3, false)
+$geekblue-10: generateColor($geekblue-base, 4, false)
 
 $lime-base: #a0d911
-$lime-1: colorPalette($lime-base, 1)
-$lime-2: colorPalette($lime-base, 2)
-$lime-3: colorPalette($lime-base, 3)
-$lime-4: colorPalette($lime-base, 4)
-$lime-5: colorPalette($lime-base, 5)
+$lime-1: generateColor($lime-base, 5, true)
+$lime-2: generateColor($lime-base, 4, true)
+$lime-3: generateColor($lime-base, 3, true)
+$lime-4: generateColor($lime-base, 2, true)
+$lime-5: generateColor($lime-base, 1, true)
 $lime-6: $lime-base
-$lime-7: colorPalette($lime-base, 7)
-$lime-8: colorPalette($lime-base, 8)
-$lime-9: colorPalette($lime-base, 9)
-$lime-10: colorPalette($lime-base, 10)
+$lime-7: generateColor($lime-base, 1, false)
+$lime-8: generateColor($lime-base, 2, false)
+$lime-9: generateColor($lime-base, 3, false)
+$lime-10: generateColor($lime-base, 4, false)
 
 $gold-base: #faad14
-$gold-1: colorPalette($gold-base, 1)
-$gold-2: colorPalette($gold-base, 2)
-$gold-3: colorPalette($gold-base, 3)
-$gold-4: colorPalette($gold-base, 4)
-$gold-5: colorPalette($gold-base, 5)
+$gold-1: generateColor($gold-base, 5, true)
+$gold-2: generateColor($gold-base, 4, true)
+$gold-3: generateColor($gold-base, 3, true)
+$gold-4: generateColor($gold-base, 2, true)
+$gold-5: generateColor($gold-base, 1, true)
 $gold-6: $gold-base
-$gold-7: colorPalette($gold-base, 7)
-$gold-8: colorPalette($gold-base, 8)
-$gold-9: colorPalette($gold-base, 9)
-$gold-10: colorPalette($gold-base, 10)
+$gold-7: generateColor($gold-base, 1, false)
+$gold-8: generateColor($gold-base, 2, false)
+$gold-9: generateColor($gold-base, 3, false)
+$gold-10: generateColor($gold-base, 4, false)
 
 $preset-colors: pink, magenta, red, volcano, orange, yellow, gold, cyan, lime, green, blue, geekblue,purple
 
@@ -176,16 +176,16 @@ $black: #000
 
 // Color used by default to control hover and active backgrounds and for
 // alert info backgrounds.
-$primary-1: colorPalette($primary-color, 1) // replace tint($primary-color, 90%)
-$primary-2: colorPalette($primary-color, 2) // replace tint($primary-color, 80%)
-$primary-3: colorPalette($primary-color, 3) // unused
-$primary-4: colorPalette($primary-color, 4) // unused
-$primary-5: colorPalette($primary-color, 5) // color used to control the text color in many active and hover states, replace tint($primary-color, 20%)
+$primary-1: generateColor($primary-color, 5, true) // replace tint($primary-color, 3, false0%)
+$primary-2: generateColor($primary-color, 4, true) // replace tint($primary-color, 2, false0%)
+$primary-3: generateColor($primary-color, 3, true) // unused
+$primary-4: generateColor($primary-color, 2, true) // unused
+$primary-5: generateColor($primary-color, 1, true) // color used to control the text color in many active and hover states, replace tint($primary-color, 20%)
 $primary-6: $primary-color // color used to control the text color of active buttons, don't use, use $primary-color
-$primary-7: colorPalette($primary-color, 7) // replace shade($primary-color, 5%)
-$primary-8: colorPalette($primary-color, 8) // unused
-$primary-9: colorPalette($primary-color, 9) // unused
-$primary-10: colorPalette($primary-color, 10) // unused
+$primary-7: generateColor($primary-color, 1, false) // replace shade($primary-color, 5%)
+$primary-8: generateColor($primary-color, 2, false) // unused
+$primary-9: generateColor($primary-color, 3, false) // unused
+$primary-10: generateColor($primary-color, 4, false) // unused
 
 // Base Scaffolding Variables
 // ---
