Do not override is-rounded with are-small. Fix #3163

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -47,7 +47,8 @@ $button-colors: $colors !default
 
 // The button sizes use mixins so they can be used at different breakpoints
 =button-small
-  border-radius: $radius-small
+  &:not(.is-rounded)
+    border-radius: $radius-small
   font-size: $size-small
 =button-normal
   font-size: $size-normal
