--- a/docs/_includes/examples/navbar-color.html
+++ b/docs/_includes/examples/navbar-color.html
@@ -7,7 +7,7 @@
         <img src="{{ site.url }}/images/bulma-logo-white.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
       {% endif %}
     </a>
-    <div class="navbar-burger burger" data-target="navMenuColor{{ include.color }}-example">
+    <div class="navbar-burger" data-target="navMenuColor{{ include.color }}-example">
       <span></span>
       <span></span>
       <span></span>
