--- a/docs/_includes/global/navbar.html
+++ b/docs/_includes/global/navbar.html
@@ -17,7 +17,7 @@
       </span>
     </a>
 
-    <div id="navbarBurger" class="navbar-burger burger" data-target="navMenu{{ include.id }}">
+    <div id="navbarBurger" class="navbar-burger" data-target="navMenu{{ include.id }}">
       <span></span>
       <span></span>
       <span></span>
