--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -525,7 +525,7 @@ meta:
           <a class="navbar-item">
             <img src="{{ site.url }}/images/bulma-type-white.png" alt="Logo">
           </a>
-          <span class="navbar-burger burger" data-target="navbarMenuHeroA">
+          <span class="navbar-burger" data-target="navbarMenuHeroA">
             <span></span>
             <span></span>
             <span></span>
@@ -595,7 +595,7 @@ meta:
           <a class="navbar-item">
             <img src="{{ site.url }}/images/bulma-type-white.png" alt="Logo">
           </a>
-          <span class="navbar-burger burger" data-target="navbarMenuHeroB">
+          <span class="navbar-burger" data-target="navbarMenuHeroB">
             <span></span>
             <span></span>
             <span></span>
@@ -676,7 +676,7 @@ meta:
           <a class="navbar-item">
             <img src="{{ site.url }}/images/bulma-type-white.png" alt="Logo">
           </a>
-          <span class="navbar-burger burger" data-target="navbarMenuHeroC">
+          <span class="navbar-burger" data-target="navbarMenuHeroC">
             <span></span>
             <span></span>
             <span></span>
