--- a/docs/_includes/examples/navbar.html
+++ b/docs/_includes/examples/navbar.html
@@ -3,7 +3,7 @@
     <a class="navbar-item" href="{{ site.url }}">
       <img src="{{ site.url }}/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
     </a>
-    <div class="navbar-burger burger" data-target="navbarExample{{ include.id }}">
+    <div class="navbar-burger" data-target="navbarExample{{ include.id }}">
       <span></span>
       <span></span>
       <span></span>
