--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -21,7 +21,7 @@ meta:
       <img src="{{ site.url }}/images/bulma-logo.png" width="112" height="28">
     </a>
 
-    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
