Fix #3214: Missing !default for $pagination-shadow-inset

--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -30,7 +30,7 @@ $pagination-current-border-color: $link !default
 
 $pagination-ellipsis-color: $grey-light !default
 
-$pagination-shadow-inset: inset 0 1px 2px rgba($scheme-invert, 0.2)
+$pagination-shadow-inset: inset 0 1px 2px rgba($scheme-invert, 0.2) !default
 
 .pagination
   @extend %block
