Use single file for extends

--- a/sass/base/_all.sass
+++ b/sass/base/_all.sass
@@ -1,6 +1,6 @@
 /* Bulma Base */
 @charset "utf-8"
 
-@import "minireset.sass"
-@import "generic.sass"
-@import "animations.sass"
+@import "minireset"
+@import "generic"
+@import "animations"
