--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -1,5 +1,5 @@
-@import "initial-variables.sass"
-@import "functions.sass"
+@import "initial-variables"
+@import "functions"
 
 $primary: $turquoise !default
 
