--- a/sass/utilities/_all.sass
+++ b/sass/utilities/_all.sass
@@ -1,8 +1,9 @@
 /* Bulma Utilities */
 @charset "utf-8"
 
-@import "initial-variables.sass"
-@import "functions.sass"
-@import "derived-variables.sass"
-@import "mixins.sass"
-@import "controls.sass"
+@import "initial-variables"
+@import "functions"
+@import "derived-variables"
+@import "mixins"
+@import "controls"
+@import "extends"
