--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -1,4 +1,4 @@
-@import "derived-variables.sass"
+@import "derived-variables"
 
 $control-radius: $radius !default
 $control-radius-small: $radius-small !default
@@ -38,9 +38,6 @@ $control-padding-horizontal: calc(0.75em - #{$control-border-width}) !default
   &[disabled],
   fieldset[disabled] &
     cursor: not-allowed
-
-%control
-  +control
 
 // The controls sizes use mixins so they can be used at different breakpoints
 =control-small
