--- a/docs/_sass/patreon.sass
+++ b/docs/_sass/patreon.sass
@@ -9,12 +9,16 @@
   margin-bottom: 0.75rem
 
 .bd-side-sponsor
-  display: inline-block
-  height: 50px
+  @extend %block
+  align-items: center
+  display: flex
+  height: 30px
+  justify-content: center
   vertical-align: top
   img
     display: block
     max-height: 100%
+    width: auto
 
 .bd-banner
   border-radius: $radius-large
