Feature/icon text (#3230)
* Init icon text, Remove old new-tag elements

* Improve icon text

* Fix icon text docs

* Update sidebar

* Update changelog

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -93,7 +93,7 @@ fieldset[disabled] .pagination-ellipsis {
 }
 
 .box:not(:last-child), .content:not(:last-child), .notification:not(:last-child), .progress:not(:last-child), .table:not(:last-child), .table-container:not(:last-child), .title:not(:last-child),
-.subtitle:not(:last-child), .block:not(:last-child), .highlight:not(:last-child), .breadcrumb:not(:last-child), .level:not(:last-child), .message:not(:last-child), .pagination:not(:last-child), .tabs:not(:last-child) {
+.subtitle:not(:last-child), .block:not(:last-child), .highlight:not(:last-child), .breadcrumb:not(:last-child), .level:not(:last-child), .message:not(:last-child), .pagination:not(:last-child), .tabs:not(:last-child), .bd-side-sponsor:not(:last-child) {
   margin-bottom: 1.5rem;
 }
 
@@ -2151,6 +2151,32 @@ fieldset[disabled] .button {
 .icon.is-large {
   height: 3rem;
   width: 3rem;
+}
+
+.icon-text {
+  align-items: flex-start;
+  color: inherit;
+  display: inline-flex;
+  flex-wrap: wrap;
+  line-height: 1.5rem;
+  vertical-align: top;
+}
+
+.icon-text .icon {
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.icon-text .icon:not(:last-child) {
+  margin-right: 0.25em;
+}
+
+.icon-text .icon:not(:first-child) {
+  margin-left: 0.25em;
+}
+
+div.icon-text {
+  display: flex;
 }
 
 .image {
@@ -15250,14 +15276,17 @@ svg {
 }
 
 .bd-side-sponsor {
-  display: inline-block;
-  height: 50px;
+  align-items: center;
+  display: flex;
+  height: 30px;
+  justify-content: center;
   vertical-align: top;
 }
 
 .bd-side-sponsor img {
   display: block;
   max-height: 100%;
+  width: auto;
 }
 
 .bd-banner {
