--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -3,8 +3,10 @@
 $dimensions: 16 24 32 48 64 96 128 !default
 
 .image
-  display: block
+  display: flex
   position: relative
+  align-items:center
+  justify-content:center
   img
     display: block
     height: auto
