Add new icon text blog post

--- a/docs/_includes/elements/link.html
+++ b/docs/_includes/elements/link.html
@@ -4,6 +4,7 @@
       {{ include.surtitle }}
     </p>
   {% endif %}
+
   <h2 class="bd-link-name">
     <figure class="bd-link-figure">
       {% if include.icon %}
@@ -21,9 +22,11 @@
     {% endif %}
     {{ include.name }}
   </h2>
-  <p class="bd-link-subtitle">
+
+  <div class="bd-link-subtitle">
     {{ include.subtitle }}
-  </p>
+  </div>
+
   {% if include.more %}
     <div class="bd-link-more">
       {{ include.more }}
