fix: increase contrast between disabled input text and background flood

--- a/sass/form/shared.sass
+++ b/sass/form/shared.sass
@@ -18,7 +18,7 @@ $input-focus-border-color: $link !default
 $input-focus-box-shadow-size: 0 0 0 0.125em !default
 $input-focus-box-shadow-color: bulmaRgba($link, 0.25) !default
 
-$input-disabled-color: $text-light !default
+$input-disabled-color: $grey-darker !default
 $input-disabled-background-color: $background !default
 $input-disabled-border-color: $background !default
 $input-disabled-placeholder-color: bulmaRgba($input-disabled-color, 0.3) !default
