Remove list style from pagination list

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6543,6 +6543,10 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   flex-wrap: wrap;
 }
 
+.pagination-list li {
+  list-style: none;
+}
+
 @media screen and (max-width: 768px) {
   .pagination {
     flex-wrap: wrap;
