--- a/docs/_includes/global/footer.html
+++ b/docs/_includes/global/footer.html
@@ -1,5 +1,7 @@
 {% include footer/support.html %}
 
+{% include global/native.html %}
+
 {% include global/newsletter.html %}
 
 {% include footer/main.html %}
