--- a/docs/_includes/global/newsletter.html
+++ b/docs/_includes/global/newsletter.html
@@ -1,6 +1,6 @@
 <div id="newsletter" class="bd-newsletter">
   <section class="bd-index-section bd-newsletter-box">
-    <div class="bd-heading">
+    <div class="bd-newsletter-heading">
       <span class="icon has-text-primary is-size-2-widescreen">
         <i class="fas fa-paper-plane"></i>
       </span>
@@ -11,7 +11,7 @@
       </h2>
 
       <form action="https://mail.jgthms.com/subscribe" method="POST" accept-charset="utf-8">
-        <div class="field is-grouped">
+        <div class="bd-newsletter-fields">
           <div class="control has-icons-left is-expanded">
             <input type="email" value="" name="email" class="input is-medium is-primary" placeholder="email address" required>
             <span class="icon is-small is-left">
