--- a/docs/bulma-docs.scss
+++ b/docs/bulma-docs.scss
@@ -217,6 +217,7 @@ $navbar-breakpoint: $tablet;
 @import './_sass/components/drawing';
 @import './_sass/components/variables';
 @import './_sass/components/book';
+@import './_sass/components/native';
 
 @import './_sass/pages/index';
 @import './_sass/pages/docs';
