--- a/docs/_includes/index/sponsors.html
+++ b/docs/_includes/index/sponsors.html
@@ -32,4 +32,8 @@
       </div>
     </div>
   </div>
+
+  <div class="bd-sponsors-carbon is-flex is-justify-content-center mt-6">
+    {% include elements/carbon.html %}
+  </div>
 </section>
