--- a/docs/_includes/index/sponsors.html
+++ b/docs/_includes/index/sponsors.html
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <div class="bd-sponsors-carbon is-flex is-justify-content-center mt-6">
+  <div class="bd-sponsors-carbon is-flex is-justify-content-center" style="margin-top: var(--bd-sponsors-spacing);">
     {% include elements/carbon.html %}
   </div>
 </section>
