--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -220,7 +220,7 @@ fieldset[disabled] .pagination-ellipsis {
   top: 0;
 }
 
-.bd-tabs-nav button, .bd-category-toggle, .bd-navbar-search-icon {
+.navbar-burger, .bd-tabs-nav button, .bd-category-toggle, .bd-navbar-search-icon {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
@@ -7311,6 +7311,16 @@ fieldset[disabled] .select select:hover {
 }
 
 .card-header-icon {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background: none;
+  border: none;
+  color: currentColor;
+  font-family: inherit;
+  font-size: 1em;
+  margin: 0;
+  padding: 0;
   align-items: center;
   cursor: pointer;
   display: flex;
@@ -10103,6 +10113,13 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
     justify-content: flex-start;
     order: 1;
   }
+  .pagination-previous,
+  .pagination-next,
+  .pagination-link,
+  .pagination-ellipsis {
+    margin-bottom: 0;
+    margin-top: 0;
+  }
   .pagination-previous {
     order: 2;
   }
@@ -10111,6 +10128,8 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   }
   .pagination {
     justify-content: space-between;
+    margin-bottom: 0;
+    margin-top: 0;
   }
   .pagination.is-centered .pagination-previous {
     order: 1;
@@ -16777,7 +16796,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   justify-content: center;
 }
 
-.bd-tabs-nav button, .bd-category-toggle, .bd-navbar-search-icon {
+.navbar-burger, .bd-tabs-nav button, .bd-category-toggle, .bd-navbar-search-icon {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
