--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -54,6 +54,7 @@ $card-media-margin: $block-spacing !default
     justify-content: center
 
 .card-header-icon
+  +reset
   align-items: center
   cursor: pointer
   display: flex
