Add default flags.

--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -2,7 +2,7 @@
 
 $card-color: $text !default
 $card-background-color: $scheme-main !default
-$card-shadow: $shadow
+$card-shadow: $shadow !default
 $card-radius: 0.25rem !default
 
 $card-header-background-color: transparent !default
