--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -3,7 +3,7 @@
 $panel-margin: $block-spacing !default
 $panel-item-border: 1px solid $border-light !default
 $panel-radius: $radius-large !default
-$panel-shadow: $shadow
+$panel-shadow: $shadow !default
 
 $panel-heading-background-color: $border-light !default
 $panel-heading-color: $text-strong !default
