--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -3,7 +3,7 @@
 $box-color: $text !default
 $box-background-color: $scheme-main !default
 $box-radius: $radius-large !default
-$box-shadow: $shadow
+$box-shadow: $shadow !default
 $box-padding: 1.25rem !default
 
 $box-link-hover-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0 0 1px $link !default
